--- a/package.json
+++ b/package.json
@@ -10,17 +10,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
-    "@tiptap/core": "^2.4.0",
-    "@tiptap/extension-heading": "^2.4.0",
-    "@tiptap/extension-image": "^2.4.0",
-    "@tiptap/extension-table": "^2.4.0",
-    "@tiptap/pm": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@tiptap/core": "2.0.3",
+    "@tiptap/extension-blockquote": "2.0.3",
+    "@tiptap/extension-bold": "2.0.3",
+    "@tiptap/extension-bubble-menu": "2.0.3",
+    "@tiptap/extension-bullet-list": "2.0.3",
+    "@tiptap/extension-code": "2.0.3",
+    "@tiptap/extension-code-block": "2.0.3",
+    "@tiptap/extension-document": "2.0.3",
+    "@tiptap/extension-dropcursor": "2.0.3",
+    "@tiptap/extension-floating-menu": "2.0.3",
+    "@tiptap/extension-gapcursor": "2.0.3",
+    "@tiptap/extension-hard-break": "2.0.3",
+    "@tiptap/extension-heading": "2.0.3",
+    "@tiptap/extension-history": "2.0.3",
+    "@tiptap/extension-image": "2.0.3",
+    "@tiptap/extension-italic": "2.0.3",
+    "@tiptap/extension-link": "2.0.3",
+    "@tiptap/extension-list-item": "2.0.3",
+    "@tiptap/extension-ordered-list": "2.0.3",
+    "@tiptap/extension-paragraph": "2.0.3",
+    "@tiptap/extension-placeholder": "2.0.3",
+    "@tiptap/extension-strike": "2.0.3",
+    "@tiptap/extension-subscript": "2.0.3",
+    "@tiptap/extension-superscript": "2.0.3",
+    "@tiptap/extension-table": "2.0.3",
+    "@tiptap/extension-table-cell": "2.0.3",
+    "@tiptap/extension-table-header": "2.0.3",
+    "@tiptap/extension-table-row": "2.0.3",
+    "@tiptap/extension-task-item": "2.0.3",
+    "@tiptap/extension-task-list": "2.0.3",
+    "@tiptap/extension-text": "2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "mui-tiptap": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -36,5 +64,10 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependenciesMeta": {
+    "mui-tiptap": {
+      "injected": true
+    }
   }
 }
