--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "@tiptap/starter-kit": "^2.0.3",
     "mui-tiptap": "^1.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-multi-email": "^1.0.23"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
