--- a/package.json
+++ b/package.json
@@ -49,12 +49,18 @@
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
+    "buffer": "^6.0.3",
+    "fs-extra": "^11.2.0",
+    "googleapis": "^140.0.0",
+    "jwt-decode": "^4.0.0",
     "mui-tiptap": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-multi-email": "^1.0.23"
+    "react-multi-email": "^1.0.23",
+    "react-spreadsheet-import": "^4.6.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -63,7 +69,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
+    "express": "^4.19.2",
+    "typescript": "^5.5.2",
     "vite": "^5.2.0"
   },
   "dependenciesMeta": {
