chore: Update npm dependencies and add gapi-script and js-base64 packages

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@tiptap/starter-kit": "^2.0.3",
     "buffer": "^6.0.3",
     "fs-extra": "^11.2.0",
+    "gapi-script": "^1.2.0",
     "googleapis": "^140.0.0",
+    "js-base64": "^3.7.7",
     "jwt-decode": "^4.0.0",
     "mui-tiptap": "^1.9.0",
     "react": "^18.2.0",
