--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
@@ -50,6 +51,8 @@
     "@tiptap/react": "2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "buffer": "^6.0.3",
+    "ckeditor5": "^42.0.0",
+    "ckeditor5-premium-features": "^42.0.0",
     "fs-extra": "^11.2.0",
     "gapi-script": "^1.2.0",
     "googleapis": "^140.0.0",
